<resources>
    <string name="app_name">나아가</string>

    <!-- BeginAdventureActivity -->
    <string name="beginAdventure_precise_access">위치 권한 요청이 허용되었습니다</string>
    <string name="beginAdventure_approximate_access">대략적인 위치 권한만 허용되었습니다</string>
    <string name="beginAdventure_denied_access">위치 권한 요청이 거절되었습니다</string>
    <string name="beginAdventure_do_adventure">모험 시작</string>
    <string name="beginAdventure_upload_place">장소 등록</string>
    <string name="beginAdventure_my_page">나의 모험</string>
    <string name="beginAdventure_continue_adventure">이어 하기</string>

    <!--OnAdventureActivity-->
    <string name="onAdventure_loading_photo">사진을 로딩 중이에요</string>
    <string name="onAdventure_fail_load_description">목적지를 받아오는데 실패했어요!</string>
    <string name="OnAdventure_on_adventure">모험 중</string>
    <string name="onAdventure_to_destination">목적지까지</string>
    <string name="onAdventure_meter">m</string>
    <string name="onAdventure_show_photo">사진보기</string>
    <string name="onAdventure_search_direction">방향찾기</string>
    <string name="onAdventure_stop">그만하기</string>
    <string name="OnAdventure_end_adventure">도착!</string>
    <string name="onAdventure_on_adventure">모험 중</string>
    <string name="onAdventure_end_adventure">목적지\n도착</string>
    <string name="onAdventure_nearby">목적지 근처예요!</string>
    <string name="polaroid_description">이곳은 어디일까요?</string>
    <string name="onAdventure_retry">목적지가 아니에요. %d회 남았어요!</string>
    <string name="onAdventure_try_count_over">시도 횟수를 초과했어요. 게임이 종료돼요</string>
    <string name="onAdventure_adventure_success">목적지를 찾는데 성공했어요!!</string>
    <string name="onAdventure_error_retry">오류가 발생했어요. 다시 시도해주세요</string>
    <string name="onAdventure_begin_error">모험 시작에 실패했어요. 다시 시작해주세요</string>
    <string name="onAdventure_no_more_hint">힌트를 모두 소진하였어요</string>
    <string name="onAdventure_unexpected_error">알 수 없는 오류가 발생했어요</string>
    <string name="OnAdventure_continue_adventure">진행중인 게임에 입장했어요!</string>
    <string name="OnAdventure_warning_back_pressed">뒤로가기 버튼을 한번 더 누르면 게임에서 나가져요!</string>
    <string name="OnAdventure_send_letter_success">쪽지 등록에 성공했어요!</string>
    <string name="OnAdventure_send_letter_fail">쪽지 등록에 실패했어요..</string>

    <!-- AdventureResultActivity -->
    <string name="adventureResult_destination_description">오늘의 목적지</string>
    <string name="adventureResult_fail_destination_name">\????</string>
    <string name="adventureResult_time_description">시간</string>
    <string name="adventureResult_distance_description">거리</string>
    <string name="adventureResult_hint_description">힌트 사용 횟수</string>
    <string name="adventureResult_try_description">정답 도전 횟수</string>
    <string name="adventureResult_score_description">Score</string>
    <string name="adventureResult_play_time_value">%d분</string>
    <string name="adventureResult_distance_value">%dm</string>
    <string name="adventureResult_hint_value">%d개</string>
    <string name="adventureResult_try_count_value">%d회</string>
    <string name="adventureResult_value">+%d</string>
    <string name="adventureResult_return_main">메인으로 돌아가기</string>
    <string name="adventureResult_rank">%d등</string>

    <!-- UploadActivity -->
    <string name="upload_title">장소 등록</string>
    <string name="upload_photo_title">장소이름</string>
    <string name="upload_photo_title_hint">장소이름을 적어주세요!</string>
    <string name="upload_submit">장소 등록</string>
    <string name="upload_success_submit">장소등록에 성공했어요!\n반영되기까지 약간의 시간이 필요해요!</string>
    <string name="upload_fail_submit">장소등록에 실패했어요!</string>
    <string name="upload_error_store_photo_message">사진을 저장하는데 문제가 생겼어요! 다시 시도해주세요!</string>
    <string name="upload_error_post_message">전송에 실패했어요! 다시 시도해주세요!</string>
    <string name="upload_error_insufficient_info_message">모든 정보를 입력해주세요.</string>
    <string name="upload_image_error_message">사진 가져오기에 실패했습니다</string>
    <string name="upload_image_orientation_error">실패했습니다. 사진을 세로로 찍어보세요!</string>
    <string name="upload_retry">다시 시도해 주세요!</string>

    <!-- AdventureHistoryActivity -->
    <string name="history_title">모험 기록</string>

    <!-- RankActivity -->
    <string name="rank_title">Leader Board</string>
    <string name="rank_my_rank">%d등</string>

    <!-- MyPageActivity -->
    <string name="mypage_adventure_record">모험 기록</string>
    <string name="mypage_rank">%d등</string>
    <string name="mypage_percentage">(상위%d%%)</string>
    <string name="mypage_count">회</string>
    <string name="mypage_number">개</string>
    <string name="mypage_minute">분</string>
    <string name="mypage_meter">m</string>
    <string name="mypage_total_adventure">전체 모험</string>
    <string name="mypage_adventure_success">모험 성공</string>
    <string name="mypage_adventure_failure">모험 실패</string>
    <string name="mypage_total_play_time">총 모험 시간</string>
    <string name="mypage_total_adventure_distance">총 직경 거리</string>
    <string name="mypage_total_hint_uses">사용 힌트 개수</string>
    <string name="mypage_place_title">내가 추가한 장소</string>
    <string name="mypage_empty_description">추가한 장소가 없어요!\n장소를 추가해 주세요!</string>
    <string name="mypage_item_adventure_count_suffix">회</string>

    <!--GiveUpDialog-->
    <string name="give_up_dialog_title">게임을 포기하시겠어요?</string>
    <string name="give_up_dialog_description">지금 떠나면 점수가 하락해요</string>
    <string name="give_up_dialog_continue">이어 하기</string>
    <string name="give_up_dialog_give_up">포기 하기</string>

    <!--HintUsingDialog-->
    <string name="hint_using_dialog_title">힌트를 사용하시겠어요?</string>
    <string name="hint_using_dialog_description">힌트가 %d개 남았어요</string>
    <string name="hint_using_dialog_continue">힌트 받기</string>
    <string name="hint_using_dialog_give_up">취소 하기</string>

    <!-- LoginActivity -->
    <string name="login_app_title">나 아 가</string>

    <!-- SettingActivity -->
    <string name="setting_withdrawal_success_message">"성공적으로 회원 탈퇴 되었습니다."</string>
    <string name="setting_wrong_error_message">"인증 정보가 잘 못 되었어요!"</string>
    <string name="setting_expiration_error_message">"인증 정보가 만료 되었어요!"</string>
    <string name="setting_logout_message">로그아웃 되었습니다.</string>
    <string name="setting_title">설정</string>
    <string name="setting_logout_title">로그아웃</string>
    <string name="setting_unlink_title">회원탈퇴</string>
    <string name="setting_question_title">문의하기</string>
    <string name="setting_question_email">naaganow@gmail.com</string>
    <string name="setting_question_email_title">[나아가에게 문의하기]</string>

    <!-- AdventureDetailActivity -->
    <string name="adventure_detail_read_letter">읽은 쪽지</string>
    <string name="adventure_detail_write_letter">등록한 쪽지</string>

    <!-- WithdrawalDialog -->
    <string name="withdrawal_dialog_title">정말 회원 탈퇴를 하시겠습니까?</string>
    <string name="withdrawal_dialog_description">나아가와 함께 즐거운 모험을 계속해보세요!</string>
    <string name="withdrawal_dialog_positive">네</string>
    <string name="withdrawal_dialog_negative">아니요</string>

    <!-- LogoutDialog -->
    <string name="logout_dialog_title">정말 로그아웃을 하시겠습니까?</string>
    <string name="logout_dialog_description">나아가와 함께 즐거운 모험을 계속해보세요!</string>
    <string name="logout_dialog_positive_text">아니오</string>
    <string name="logout_dialog_negative_text">예</string>

    <!-- ConfirmDialog -->
    <string name="confirm_dialog_title">업데이트 확인</string>
    <string name="confirm_dialog_description">새로운 버전이 출시되었어요!\n업데이트가 필요해요!</string>
    <string name="confirm_dialog_positive_text">업데이트</string>
    <string name="confirm_dialog_negative_text">취소</string>

    <!-- Snackbar -->
    <string name="snackbar_location_message">위치 권한이 필요해요!</string>
    <string name="snackbar_storage_message">저장소 권한이 필요해요!</string>
    <string name="snackbar_action_title">이동하기</string>
    <string name="snackbar_action_re_request_message">다시 요청해주세요!</string>
    <string name="snackbar_action__re_request_title">나가기</string>

    <!-- SendLetterDialog -->
    <string name="send_letter_dialog_hint">이 곳에 내용을 작성해주세요!</string>
    <string name="send_letter_dialog_warning">내용을 1자 이상 입력해주세요!</string>
    <string name="send_letter_dialog_submit">전송하기</string>

    <!-- ProfileActivity -->
    <string name="profile_nickname_hint">변경 할 닉네임을 입력하세요!</string>
    <string name="profile_nickname_manual">한글 2~10 글자 사이\n영어 2~20 글자 사이\n공백 허용, 특수문자 사용 불가</string>
    <string name="profile_nickname_modify">닉네임 변경</string>
    <string name="profile_modify_success_message">변경 되었어요!</string>
    <string name="profile_modify_fail_message">변경을 실패 했어요! 다시 시도해주세요</string>
    <string name="profile_no_content_message">변경 할 닉네임을 1글자 이상 작성해주세요!</string>

    <!-- All -->
    <string name="network_error_message">문제가 발생했어요. 다시 시도해주세요!</string>


</resources>
