<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_radius_small"
        android:backgroundTint="@color/white">

        <TextView
            tools:text="@string/give_up_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_alert_dialog_title" />

        <TextView
            android:id="@+id/tv_alert_dialog_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/give_up_dialog_description"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="12sp"
            android:textColor="@color/light_gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_alert_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_alert_dialog_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/give_up_dialog_give_up"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/rect_radius_small_bottom_left"
            android:backgroundTint="@color/light_gray"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@id/tv_alert_dialog_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alert_dialog_description" />

        <TextView
            android:id="@+id/tv_alert_dialog_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/give_up_dialog_continue"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/rect_radius_small_bottom_right"
            android:backgroundTint="@color/main_dark_blue"
            android:gravity="center"
            android:paddingVertical="20dp"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toEndOf="@id/tv_alert_dialog_negative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_alert_dialog_negative"
            app:layout_constraintTop_toTopOf="@+id/tv_alert_dialog_negative" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
