<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.now.naaga.presentation.onadventure.OnAdventureViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.onadventure.OnAdventureActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_onAdventure_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_gray_opacity_medium"
            android:elevation="4dp"
            android:padding="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/walking_loading" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_onAdventure_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_onAdventure_destination_is_nearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/onAdventure_nearby"
                android:textSize="36sp"
                android:visibility="@{viewModel.isNearby() ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_onAdventure_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:visibility="@{viewModel.isNearby() ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_onAdventure_to_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onAdventure_to_destination"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_onAdventure_left_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@{viewModel.distance == null ? String.valueOf(0) : String.valueOf(viewModel.distance)}"
                    android:textSize="64sp"
                    tools:text="172" />

                <TextView
                    android:id="@+id/tv_onAdventure_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onAdventure_meter"
                    android:textSize="36sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcv_onAdventure_map"
            android:name="com.naver.maps.map.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll_onAdventure_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_onAdventure_top" />

        <com.naver.maps.map.widget.LocationButtonView
            android:id="@+id/btn_onAdventure_navermap_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default_medium"
            android:layout_marginBottom="@dimen/space_default_medium"
            app:layout_constraintBottom_toTopOf="@id/ll_onAdventure_bottom"
            app:layout_constraintStart_toStartOf="parent" />

        <com.naver.maps.map.widget.CompassView
            android:id="@+id/navermap_compass_onAdventure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default_medium"
            android:layout_marginTop="@dimen/space_default_medium"
            app:layout_constraintStart_toStartOf="@id/fcv_onAdventure_map"
            app:layout_constraintTop_toTopOf="@id/fcv_onAdventure_map" />

        <ImageView
            android:id="@+id/iv_send_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_default_medium"
            android:layout_marginBottom="@dimen/space_default_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_letter_send"
            app:layout_constraintBottom_toTopOf="@id/ll_onAdventure_bottom"/>

        <LinearLayout
            android:id="@+id/ll_onAdventure_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_onAdventure_show_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="40dp"
                android:paddingBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_onAdventure_show_photo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintBottom_toTopOf="@id/tv_onAdventure_show_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_onAdventure_show_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onAdventure_show_photo"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_onAdventure_show_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view_onAdventure_divider_show_photo"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:background="@color/white" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_onAdventure_search_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="40dp"
                android:paddingBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_onAdventure_search_direction"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_compass"
                    app:layout_constraintBottom_toTopOf="@id/tv_onAdventure_search_direction"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_onAdventure_search_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onAdventure_search_direction"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_onAdventure_search_direction" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view_onAdventure_divider_search_direction"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:background="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_onAdventure_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="40dp"
                android:paddingBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_onAdventure_stop"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_stop"
                    app:layout_constraintBottom_toTopOf="@id/tv_onAdventure_stop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_onAdventure_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onAdventure_stop"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_onAdventure_stop" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/onAdventure_on_adventure"
                    android:textSize="20sp"
                    android:visibility="@{viewModel.isNearby() ? View.GONE : View.VISIBLE}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_onAdventure_arrived"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_yellow_button_thick"
                    android:text="@string/onAdventure_end_adventure"
                    android:textSize="20sp"
                    android:visibility="@{viewModel.isNearby() ? View.VISIBLE : View.GONE}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
